--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               />
             </a>
           </div>
-          
+
           <div class="col-1 d-flex justify-content-end">
             <div class="dropdown dropdown-menu-right header__dropdown-menu">
               <a
@@ -45,7 +45,7 @@
                   height="22"
                 />
               </a>
-              <ul class="dropdown-menu dropdown-menu-right">
+              <ul class="dropdown-menu dropdown-menu-end">
                 <li>
                   <a class="dropdown-item" href="#ourstores">Nossas Lojas</a>
                 </li>
@@ -54,11 +54,55 @@
                 </li>
               </ul>
             </div>
-            
           </div>
         </div>
       </nav>
     </header>
+
+    <section>
+      <div class="row">
+        <div class="col-12 p-0">
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/banner-reabertura-2484x945 (1) 1.jpg" class="d-block w-100" alt="reopening banner" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/banner-reabertura-2484x945 (1) 1.png" class="d-block w-100" alt="reopening banner" />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
