--- a/index.html
+++ b/index.html
@@ -141,14 +141,71 @@
     </section>
 
     <section id="schedule" class="row text-center schedule-section m-0 py-4">
-      <div class="col text-center">
-        <h2 class="schedule-section__title">
-          <strong>PROGRAMAÇÃO</strong> CINEMARK
-        </h2>
+      <div class="text-center">
+        <div class="row mb-3">
+          <div
+            class="col-2 d-xl-none d-flex align-items-center justify-content-end"
+          >
+            <hr class="schedule-section__title-separator opacity-100" />
+          </div>
+          <div class="col-8 col-xl-12">
+            <h2 class="schedule-section__title mx-auto">
+              <strong>PROGRAMAÇÃO</strong> CINEMARK
+            </h2>
+          </div>
+          <div
+            class="col-2 d-xl-none d-flex align-items-center justify-content-start"
+          >
+            <hr class="schedule-section__title-separator opacity-100" />
+          </div>
+        </div>
         <div class="container schedule-section__container">
           <div
+            id="carouselIndicatorsXL"
+            class="d-none d-xl-block carousel slide"
+            data-bs-ride="true"
+          >
+            <div
+              class="carousel-indicators schedule-section__carousel-indicators mb-0 mt-5"
+            >
+              <button
+                type="button"
+                data-bs-target="#carouselIndicatorsXL"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselIndicatorsXL"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="d-xl-flex justify-content-evenly">
+                  <img src="./img/cartaz1.png" alt="Minha mãe é uma peça" />
+                  <img src="./img/cartaz2.png" alt="Dois irmãos" />
+                  <img src="./img/cartaz3.png" alt="Um lugar silencioso 2" />
+                  <img src="./img/cartaz4.png" alt="Maldição do espelho" />
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="d-xl-flex justify-content-evenly">
+                  <img src="./img/cartaz4.png" alt="Maldição do espelho" />
+                  <img src="./img/cartaz3.png" alt="Um lugar silencioso 2" />
+                  <img src="./img/cartaz2.png" alt="Dois irmãos" />
+                  <img src="./img/cartaz1.png" alt="Minha mãe é uma peça" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
             id="carouselIndicators"
-            class="carousel slide"
+            class="d-block d-xl-none carousel slide"
             data-bs-ride="true"
           >
             <div
@@ -158,7 +215,7 @@
                 type="button"
                 data-bs-target="#carouselIndicators"
                 data-bs-slide-to="0"
-                class="px-4 active"
+                class="active"
                 aria-current="true"
                 aria-label="Slide 1"
               ></button>
@@ -166,52 +223,79 @@
                 type="button"
                 data-bs-target="#carouselIndicators"
                 data-bs-slide-to="1"
-                class="px-4"
                 aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselIndicators"
+                data-bs-slide-to="3"
+                aria-label="Slide 4"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselIndicators"
+                data-bs-slide-to="4"
+                aria-label="Slide 5"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselIndicators"
+                data-bs-slide-to="5"
+                aria-label="Slide 6"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselIndicators"
+                data-bs-slide-to="6"
+                aria-label="Slide 7"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselIndicators"
+                data-bs-slide-to="7"
+                aria-label="Slide 8"
               ></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active d-flex justify-content-evenly">
-                <img src="./img/cartaz1.png" alt="" />
-                <img src="./img/cartaz2.png" alt="" />
-                <img src="./img/cartaz3.png" alt="" />
-                <img src="./img/cartaz4.png" alt="" />
+              <div class="carousel-item active">
+                <img src="./img/cartaz1.png" alt="Minha mãe é uma peça" />
               </div>
-              <div class="carousel-item d-flex justify-content-evenly">
-                <img src="./img/cartaz1.png" alt="" />
-                <img src="./img/cartaz2.png" alt="" />
-                <img src="./img/cartaz3.png" alt="" />
-                <img src="./img/cartaz4.png" alt="" />
+              <div class="carousel-item">
+                <img src="./img/cartaz2.png" alt="Dois irmãos" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/cartaz3.png" alt="Um lugar silencioso 2" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/cartaz4.png" alt="Maldição do espelho" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/cartaz1.png" alt="Minha mãe é uma peça" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/cartaz2.png" alt="Dois irmãos" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/cartaz3.png" alt="Um lugar silencioso 2" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/cartaz4.png" alt="Maldição do espelho" />
               </div>
             </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselIndicators"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselIndicators"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
         </div>
       </div>
     </section>
+
+    <footer>
+      
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
