--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   </head>
   <body>
     <header>
-      <nav class="py-3 px-4 navbar">
+      <nav class="py-3 px-4 px-sm-5 navbar">
         <div class="container p-0">
           <div
             class="col-11 d-flex justify-content-center justify-content-sm-start"
           >
             <a class="p-0 m-0 text-align-center navbar-brand" href="index.html">
               <img
-                src="/img/logo 1.png"
+                src="/img/logo-header.png"
                 alt="Recreio Shopping Logo"
                 class="img-fluid header__logo"
                 width="176"
@@ -293,8 +293,21 @@
       </div>
     </section>
 
-    <footer>
-      
+    <footer class="row m-0 p-5 footer tex-center">
+      <div class="container d-flex justify-content-evenly align-items-center m-auto p-0">
+        <img
+          src="/img/logo-footer.png"
+          alt="Recreio Shopping Logo"
+          class="img-fluid"
+          width="171"
+          height="92"
+        />
+
+        <a class="footer__page-link" href="">VITRINE VIRTUAL</a>
+        <a class="footer__page-link" href="">NOSSAS LOJAS</a>
+        <a class="footer__page-link" href="">CINEMA</a>
+        <a class="footer__page-link" href="">GASTRONOMIA</a>
+      </div>
     </footer>
 
     <script
