finished footer responsivity

--- a/index.html
+++ b/index.html
@@ -294,19 +294,52 @@
     </section>
 
     <footer class="row m-0 p-5 footer tex-center">
-      <div class="container d-flex justify-content-evenly align-items-center m-auto p-0">
-        <img
-          src="/img/logo-footer.png"
-          alt="Recreio Shopping Logo"
-          class="img-fluid"
-          width="171"
-          height="92"
-        />
+      <div class="container m-auto p-0">
+        <div
+          class="row d-block d-sm-flex justify-content-evenly align-items-center m-auto p-0"
+        >
+          <div class="col-12 col-lg-3 mb-5 mb-lg-2 d-flex justify-content-center">
+            <img
+              src="/img/logo-footer.png"
+              alt="Recreio Shopping Logo"
+              class="img-fluid mb-3 mb-lg-0"
+              width="171"
+              height="92"
+            />
+          </div>
+          
 
-        <a class="footer__page-link" href="">VITRINE VIRTUAL</a>
-        <a class="footer__page-link" href="">NOSSAS LOJAS</a>
-        <a class="footer__page-link" href="">CINEMA</a>
-        <a class="footer__page-link" href="">GASTRONOMIA</a>
+          <div class="col-12 col-md-3 col-lg-2 my-4  py-2 d-flex justify-content-start justify-content-md-center footer__page-link-container">
+            <div class="footer__page-link-divider d-sm-none">
+              <hr >
+            </div>
+            <a class="footer__page-link " href=""
+              >VITRINE VIRTUAL</a
+            >
+          </div>
+          <div class="col-12 col-md-3 col-lg-2 my-4  py-2 d-flex justify-content-start justify-content-md-center footer__page-link-container">
+            <div class="footer__page-link-divider d-sm-none">
+              <hr >
+            </div>
+            <a class="footer__page-link " href=""
+              >NOSSAS LOJAS</a
+            >
+          </div>
+          <div class="col-12 col-md-3 col-lg-2 my-4  py-2 d-flex tex-left justify-content-start justify-content-md-center footer__page-link-container">
+            <div class="footer__page-link-divider d-sm-none">
+              <hr >
+            </div>
+            <a class="footer__page-link " href="">CINEMA</a>
+          </div>
+          <div class="col-12 col-md-3 col-lg-2 my-4  py-2 d-flex justify-content-start justify-content-md-center footer__page-link-container">
+            <div class="footer__page-link-divider d-sm-none">
+              <hr >
+            </div>
+            <a class="footer__page-link " href=""
+              >GASTRONOMIA</a
+            >
+          </div>
+        </div>
       </div>
     </footer>
 
