--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
               </div>
             </div>
             <button
-              class="carousel-control-prev"
+              class="carousel-control-prev carousel__button-previous"
               type="button"
               data-bs-target="#carouselControls"
               data-bs-slide="prev"
             >
               <span
-                class="carousel-control-prev-icon"
+                class="carousel-control-prev-icon "
                 aria-hidden="true"
               ></span>
               <span class="visually-hidden">Previous</span>
             </button>
             <button
-              class="carousel-control-next"
+              class="carousel-control-next carousel__button-next"
               type="button"
               data-bs-target="#carouselControls"
               data-bs-slide="next"
