--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
     </section>
 
     <section id="schedule" class="row text-center schedule-section m-0 py-4">
-      <div class="text-center">
-        <div class="row mb-3">
+      <div class="text-center p-0">
+        <div class="row m-0 mb-3">
           <div
             class="col-2 d-xl-none d-flex align-items-center justify-content-end"
           >
@@ -159,7 +159,7 @@
             <hr class="schedule-section__title-separator opacity-100" />
           </div>
         </div>
-        <div class="container schedule-section__container">
+        <div class="container schedule-section__container p-0">
           <div
             id="carouselIndicatorsXL"
             class="d-none d-xl-block carousel slide"
@@ -264,37 +264,61 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/cartaz1.png" alt="Minha mãe é uma peça" />
+                <img class="schedule-section__baner-image" src="./img/cartaz1.png" alt="Minha mãe é uma peça" />
               </div>
               <div class="carousel-item">
-                <img src="./img/cartaz2.png" alt="Dois irmãos" />
+                <img class="schedule-section__baner-image" src="./img/cartaz2.png" alt="Dois irmãos" />
               </div>
               <div class="carousel-item">
-                <img src="./img/cartaz3.png" alt="Um lugar silencioso 2" />
+                <img class="schedule-section__baner-image" src="./img/cartaz3.png" alt="Um lugar silencioso 2" />
               </div>
               <div class="carousel-item">
-                <img src="./img/cartaz4.png" alt="Maldição do espelho" />
+                <img class="schedule-section__baner-image" src="./img/cartaz4.png" alt="Maldição do espelho" />
               </div>
               <div class="carousel-item">
-                <img src="./img/cartaz1.png" alt="Minha mãe é uma peça" />
+                <img class="schedule-section__baner-image" src="./img/cartaz1.png" alt="Minha mãe é uma peça" />
               </div>
               <div class="carousel-item">
-                <img src="./img/cartaz2.png" alt="Dois irmãos" />
+                <img class="schedule-section__baner-image" src="./img/cartaz2.png" alt="Dois irmãos" />
               </div>
               <div class="carousel-item">
-                <img src="./img/cartaz3.png" alt="Um lugar silencioso 2" />
+                <img class="schedule-section__baner-image" src="./img/cartaz3.png" alt="Um lugar silencioso 2" />
               </div>
               <div class="carousel-item">
-                <img src="./img/cartaz4.png" alt="Maldição do espelho" />
+                <img class="schedule-section__baner-image" src="./img/cartaz4.png" alt="Maldição do espelho" />
               </div>
             </div>
+            <button
+            class="carousel-control-prev schedule-section__carousel-button-previous d-xl-none"
+            type="button"
+            data-bs-target="#carouselIndicators"
+            data-bs-slide="prev"
+          >
+            <span
+              class="carousel-control-prev-icon "
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next schedule-section__carousel-button-next d-xl-none"
+            type="button"
+            data-bs-target="#carouselIndicators"
+            data-bs-slide="next"
+          >
+            <span
+              class="carousel-control-next-icon"
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Next</span>
+          </button>
           </div>
         </div>
       </div>
     </section>
 
     <footer class="row m-0 p-5 footer tex-center">
-      <div class="container m-auto p-0">
+      <div class="container m-auto p-0 px-lg-5">
         <div
           class="row d-block d-sm-flex justify-content-evenly align-items-center m-auto p-0"
         >
